[package]
authors = ["Jimmy Kamau <jimmykambiz@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "hello-morse"
version = "0.1.0"

[dependencies]
stm32f1xx-hal = { version = "0.4", features = ["stm32f103", "rt"] }
cortex-m = "0.6.1"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-semihosting = "0.5.3"
void = { version = "1.0.2", default_features = false }
embedded-hal = "0.2.3"
